recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:26: error: ')' expected but '}' found.
  }
  ^